# single_translator_VAE

./: .cruft.json  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md
docs/notebooks/: RMS_preprocessing.ipynb  example.ipynb  hyperparameter_grid_search.ipynb
src/single_translator_VAE/: __init__.py
src/single_translator_VAE/pl/: __init__.py  plot.py
src/single_translator_VAE/pp/: __init__.py  single_cell_preprocessing.py
src/single_translator_VAE/pp/R/: filter_miQC.R
src/single_translator_VAE/tl/: __init__.py  single_cell_tools.py
src/single_translator_VAE/vae/: __init__.py  vae_model.py  vae_module.py
tests/: test_basic.py  test_model.py
